# Blingbids

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
deploy/5.50ct-solitaire-live/: LIVE-ROOM-POST.md  NEXT-ITEM.md  index.html
docs/: DEPLOYMENT.md  EXECUTIVE-SUMMARY.md  FIGMA-SPEC.md  MARKETING.md
programs/: Anchor.toml
programs/blingbids_escrow/: Cargo.toml
programs/blingbids_escrow/src/: lib.rs
scripts/: git-sync.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/attestation/: page.tsx
src/app/boost-fund/: page.tsx
src/app/live/: page.tsx
src/app/merchant/: page.tsx
src/app/sell/: page.tsx
src/app/vault/: page.tsx
src/components/auction/: BidPanel.tsx  BoostFundBanner.tsx  HoldButton.tsx  ListingCard.tsx  LiveChat.tsx  TimedAuctionView.tsx  TrustPanel.tsx
src/components/grok/: BlingAssistant.tsx  GenerateListingImage.tsx  GrokToolsPanel.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/live/: LiveRoom.tsx
src/components/merchant/: TurnoverReportForm.tsx
src/components/seller/: QuickSellFlow.tsx  VerificationWizard.tsx
src/components/sparkle/: ConfettiWin.tsx  SparkleOverlay.tsx
src/components/ui/: badge.tsx  button.tsx
src/components/vault/: VaultCarousel.tsx
src/hooks/: useAITracking.ts  useGrok.ts
src/lib/: mock-data.ts  types.ts  utils.ts
src/lib/grok/: client.ts  images.ts  prompts.ts  types.ts
src/lib/merchant/: ai-tool-map.ts  store.ts  types.ts  validation.ts
src/providers/: SolanaProvider.tsx
(+10 files in other folders)
