[package]
name = "blingbids_escrow"
version = "0.1.0"
description = "Blingbids.com escrow, HOLD, and Boost Fund fee reroute program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blingbids_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"